# CheckerRL

./: README.md  pyproject.toml
other/: policy_iteration.py
src/: board_state.py  player.py  run_game.py
src/MCTS/: MCTS.py  NeuralNetwork.py  TODO.md  mcts_algorithm.py  node.py  pyproject.toml
src/MTCS/: MCTS.py  __init__.py  main.py  node.py  pyproject.toml
src/algorithms/: mcts_algorithm.py  model_planner_algorithm.py
src/common/: __init__.py  board_state.py  player.py  pyproject.toml
src/common/src/common/: board_state.py  player.py
src/model_based_planner/: pyproject.toml
src/model_based_planner/src/model_based_planner/: __init__.py  model_planner_algorithm.py  run_game.py
src/other/: value_iteration.py
